--- a/style.css
+++ b/style.css
@@ -1,5 +1,85 @@
-canvas{
-    position:fixed;
-    top: 0;
-    left: 0;
-  }
+@import url("https://use.typekit.net/jmk3xov.css");
+
+canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+:root {
+  --dark-bg: rgba(15, 15, 15, 0.95);
+  --spacing: 350px;
+
+  font-family: brandon-grotesque, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+main {
+  width: 100vw;
+  color: white;
+  z-index: 99;
+  position: absolute;
+  width: 100%;
+  margin: 0px auto;
+  padding: 120px 0px;
+
+  display: grid;
+  grid-template-columns: repeat(12, 1fr); /*to make 12 even columns*/
+}
+
+h1,
+h2,
+h3,
+blockquote {
+  font-family: elevon, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+header {
+  background: var(--dark-bg);
+  grid-column: 2 / span 5; /*START on col 2 span 5 columns*/
+  font-size: 2rem;
+  padding: 1rem;
+  margin-bottom: var(--spacing);
+}
+
+section {
+  grid-column: 2 / 8; /*start on col 2 END on col 8*/
+  padding: 3rem;
+  background: var(--dark-bg);
+  font-size: 1.25rem;
+  line-height: 1.5;
+  margin-bottom: var(--spacing);
+}
+
+blockquote {
+  margin: 0;
+  padding: 0;
+  grid-column: 2 / span 9;
+  margin-bottom: var(--spacing);
+}
+
+blockquote p {
+  color: black;
+  background-color: white;
+  font-size: 4rem;
+  display: inline;
+  line-height: 1.3;
+}
+
+.left {
+  grid-column: 6 / 12;
+  background: var(--dark-bg);
+  grid-column: 2 / span 5; /*START on col 2 span 5 columns*/
+  font-size: 1rem;
+  padding: 1rem;
+  margin-bottom: var(--spacing);
+}
